system_ss.add(when: 'CONFIG_FEMU_PCI', if_true: files('dma.c', 'intr.c', 'nvme-util.c', 'nvme-admin.c', 'nvme-io.c', 'femu.c', 'nossd/nop.c', 'nand/nand.c', 'timing-model/timing.c', 'ocssd/oc12.c', 'ocssd/oc20.c', 'zns/zns.c', 'zns/zftl.c','bbssd/bb.c', 'bbssd/ftl.c', 'mstream/msftl.c', 'mstream/ms.c', 'fdp/fdpftl.c', 'fdp/fdp.c', 'f2dp/f2dp.c', 'f2dp/f2dpftl.h', 'f2dp/f2dpftl.c', 'lib/pqueue.c', 'lib/rte_ring.c', 'backend/dram.c'))